2012.01.08

* Updated Makefile to push to Google Code as well.
* Updated title in proposed 2.0 spec.
* Added 2.0 spec.

2012.01.06

* Added a Makefile that will eventually replace the admin scripts.
* Added *ignore files.
* Updated Makefile with improved (and more) targets as well as support for both
bzr and git.
* Added a silly version script (used by the Makefile).
* Fixed the MANIFEST.in file (this addresses a long-standing bug in this
version of txJSON-RPC).
* Incremented the version number due to the bug fix for the included docs in
the source build.
* Fixed the virtual-env build make target.
* Fixed up the dist util module to account for the renamed README.
* Fixed the json import for modern versions of Python.
* Removed web2 support.
* Updated HISTORY file.
* Updated TODO.
* Another update to the TODO.

2009.11.09

* Removed the version hack and determined version of the request made to the
server by message format/spec support.

2009.11.08

* Added import checks in auth.py.
* Added test case for auth imports.
* Fixed up the import unit tests with reloads.
* Added unit tests for realm test case.
* Restructured the get* methods for the web and web2 modules.
* Added unit tests for wrapped resource test case.
* Removed version 1 test methods in JSONRPC test case.
* Added unit tests for jsonrpclib.dumps.
* Added unit tests for jsonrpc.BaseProxy.
* Updated defs with svn branch.
* Added unit tests for base query factory.
* Started a test case for the jsonrpclib loads function.
* Fixed the server's render callback where the version was being passed as
unicode instead of an int.
* Touched up a unit test.
* Updated the spec docs with a change.

2009.11.07

* Added authentication support with cred for twisted.web2-based JSON-RPC
reources.
* Updated history file.
* Added test case for auth imports.

2009.11.06

* Reverted trunk to pre-version-work point.
* Cherry-picked the change that added missing deferred returns in two tests.