@@ -1,2 +1,0 @@
-alice:s3cr3t
-bob:p4ssw0rd
